feat: cooldown info invite

--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -11,6 +11,8 @@
 	"chooseClass": "Choose class",
 	"class": "Class",
 	"consumables": "Consumables",
+	"cooldown": "Cooldown",
+	"daily": "Daily",
 	"descriptions": {
 		"awakeName": "Your character name",
 		"buyItem": "The item you want to buy.",
@@ -27,6 +29,7 @@
 	"drop": "Drops",
 	"examples": "Examples",
 	"fighter": "Fighter",
+	"gate": "Gate",
 	"gloves": "Gloves",
 	"guild": "Guild",
 	"heal": "Heal",
@@ -34,8 +37,10 @@
 	"helmet": "Helmet",
 	"help": "Help",
 	"hunter": "Hunter",
+	"info": "Info",
 	"information": "Information",
 	"inventory": "Inventory",
+	"invite": "Invite",
 	"item": "Item",
 	"keys": "Keys",
 	"language": "Language",
@@ -49,9 +54,11 @@
 		"size": "Size",
 		"turns": "Duration"
 	},
+	"library": "Library",
 	"links": "Useful links",
 	"mage": "Mage",
 	"materials": "Materials",
+	"max": "Max",
 	"missingField": "Missing these fields: {{fields}}",
 	"money": "Money",
 	"name": "Name",
@@ -64,11 +71,14 @@
 	"quantity": "Quantity",
 	"ranger": "Ranger",
 	"rank": "Rank",
+	"ready": "Ready",
 	"recover": "Recover",
 	"ring": "Ring",
 	"rule": "Rules",
 	"selectMenuPlaceholder": "Make a selection",
 	"sellValue": "Sell value",
+	"server": "Server",
+	"shard": "Shard",
 	"shoes": "Shoes",
 	"show": "Show",
 	"skills": "Skills",
@@ -77,13 +87,25 @@
 	"start": "Start",
 	"tanker": "Tanker",
 	"term": "Terms",
+	"timeUnits": {
+		"year": { "1": "year", "DEFAULT": "years" },
+		"month": { "1": "month", "DEFAULT": "months" },
+		"week": { "1": "week", "DEFAULT": "weeks" },
+		"day": { "1": "day", "DEFAULT": "days" },
+		"hour": { "1": "hour", "DEFAULT": "hours" },
+		"minute": { "1": "minute", "DEFAULT": "minutes" },
+		"second": { "1": "second", "DEFAULT": "seconds" }
+	},
 	"timeout": "Time out",
 	"type": "Type",
 	"unspecialized": "Unspecialized",
+	"uptime": "Uptime",
 	"usableKeys": "Keys",
 	"usage": "Usage",
 	"use": "Use",
+	"vote": "Vote",
 	"weapon": "Weapon",
+	"weekly": "Weekly",
 	"welcome": "Welcome",
 	"yes": "Yes"
 }
