--- a/src/languages/vi/common.json
+++ b/src/languages/vi/common.json
@@ -11,6 +11,8 @@
 	"chooseClass": "Chọn thiên chức",
 	"class": "Thiên chức",
 	"consumables": "Tiêu thụ",
+	"cooldown": "Cooldown",
+	"daily": "Hàng ngày",
 	"descriptions": {
 		"awakeName": "Tên nhân vật",
 		"buyItem": "Vật phẩm mà bạn muốn mua.",
@@ -27,6 +29,7 @@
 	"drop": "Vật phẩm",
 	"examples": "Ví dụ",
 	"fighter": "Đấu sĩ",
+	"gate": "Cổng",
 	"gloves": "Găng",
 	"guild": "Bang hội",
 	"heal": "Hồi máu",
@@ -34,8 +37,10 @@
 	"helmet": "Mũ",
 	"help": "Trợ giúp",
 	"hunter": "Thợ săn",
+	"info": "Thông tin",
 	"information": "Thông tin",
 	"inventory": "Kho đồ",
+	"invite": "Mời",
 	"item": "Vật phẩm",
 	"keys": "Khóa",
 	"language": "Ngôn ngữ",
@@ -49,9 +54,11 @@
 		"size": "Kích thước",
 		"turns": "Thời lượng"
 	},
+	"library": "Thư viện",
 	"links": "Useful links",
 	"mage": "Pháp sư",
 	"materials": "Vật liệu",
+	"max": "Tối đa",
 	"missingField": "Thiếu mục: {{fields}}",
 	"money": "Tiền tệ",
 	"name": "Tên",
@@ -64,11 +71,14 @@
 	"quantity": "Số lượng",
 	"ranger": "Xạ thủ",
 	"rank": "Hạng",
+	"ready": "Sẵn sàng",
 	"recover": "Hồi phục",
 	"ring": "Nhẫn",
 	"rule": "Luật",
 	"selectMenuPlaceholder": "Lựa chọn",
 	"sellValue": "Giá bán",
+	"server": "Máy chủ",
+	"shard": "Mảnh",
 	"shoes": "Giày",
 	"show": "Hiển thị",
 	"skills": "Kĩ năng",
@@ -77,13 +87,25 @@
 	"start": "Hướng dẫn",
 	"tanker": "Đỡ đòn",
 	"term": "Thuật ngữ",
+	"timeUnits": {
+		"year": { "DEFAULT": "năm" },
+		"month": { "DEFAULT": "tháng" },
+		"week": { "DEFAULT": "tuần" },
+		"day": { "DEFAULT": "ngày" },
+		"hour": { "DEFAULT": "giờ" },
+		"minute": { "DEFAULT": "phút" },
+		"second": { "DEFAULT": "giây" }
+	},
 	"timeout": "Hết giờ",
 	"type": "Loại",
 	"unspecialized": "Tán nhân",
+	"uptime": "Uptime",
 	"usableKeys": "Khóa",
 	"usage": "Sử dụng",
 	"use": "Sử dụng",
+	"vote": "Bình chọn",
 	"weapon": "Vũ khí",
+	"weekly": "Hàng tuần",
 	"welcome": "Chào mừng",
 	"yes": "Có"
 }
