--- a/src/languages/vi/glossary.json
+++ b/src/languages/vi/glossary.json
@@ -2,24 +2,24 @@
 	"SLS": "Solo Leveling Simulator",
 	"WHA": "Hiệp hội thợ săn thế giới",
 	"challenges": {
-		"hunterSlayer": "**Thợ Săn Người**: {{count}}"
+		"hunterSlayer": "**Thợ Săn Người**: {{count, number}}"
 	},
 	"currencies": {
 		"gold": "Vàng",
-		"gold_count_one": "{{number}} $t(glossary:currencies.gold)",
-		"gold_count_other": "{{number}} $t(glossary:currencies.gold_other)",
+		"gold_count_one": "{{count, number}} $t(glossary:currencies.gold)",
+		"gold_count_other": "{{count, number}} $t(glossary:currencies.gold_other)",
 		"gold_other": "Vàng",
 		"magicCore": "Ma Thạch",
-		"magicCore_count_one": "{{number}} $t(glossary:currencies.magicCore)",
-		"magicCore_count_other": "{{number}} $t(glossary:currencies.magicCore_other)",
+		"magicCore_count_one": "{{count, number}} $t(glossary:currencies.magicCore)",
+		"magicCore_count_other": "{{count, number}} $t(glossary:currencies.magicCore_other)",
 		"magicCore_other": "Ma Thạch",
 		"manaCrystal": "Đá Năng Lượng",
-		"manaCrystal_count_one": "{{number}} $t(glossary:currencies.manaCrystal)",
-		"manaCrystal_count_other": "{{number}} $t(glossary:currencies.manaCrystal_other)",
+		"manaCrystal_count_one": "{{count, number}} $t(glossary:currencies.manaCrystal)",
+		"manaCrystal_count_other": "{{count, number}} $t(glossary:currencies.manaCrystal_other)",
 		"manaCrystal_other": "Đá Năng Lượng",
 		"votePoint": "Điểm bình chọn",
-		"votePoint_count_one": "{{number}} $t(glossary:currencies.votePoint)",
-		"votePoint_count_other": "{{number}} $t(glossary:currencies.votePoint_other)",
+		"votePoint_count_one": "{{count, number}} $t(glossary:currencies.votePoint)",
+		"votePoint_count_other": "{{count, number}} $t(glossary:currencies.votePoint_other)",
 		"votePoint_other": "Điểm bình chọn"
 	},
 	"effects": {
